--- a/dna-rankings/src/App.css
+++ b/dna-rankings/src/App.css
@@ -36,3 +36,29 @@
     transform: rotate(360deg);
   }
 }
+
+/* add nav css */
+nav {
+  margin-bottom: 20px;
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+nav li {
+  display: inline;
+  margin-right: 10px;
+}
+
+nav button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+nav button:hover {
+  text-decoration: underline;
+}
